yaml/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-yaml-service
spec:
  selector:
    app: nginx-yaml
  ports:
    - port: 80
